# school_feeding_django

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
core/apps/detect_malware/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
core/apps/detect_malware/migrations/: 0001_initial.py  0002_alter_mymodel_file.py
core/school_feeding/: asgi.py  urls.py  wsgi.py
core/school_feeding/settings/: main.py
core/templates/detect_malware/: index.html
