[tool.poetry]
name = "school-feeding"
version = "0.1.0"
description = ""
authors = ["Arman <ghandilyanarman78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-environ = "^0.11.2"
vt-py = "^0.18.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
